clusters/homelab/apps/jellyfin/pvc-testing.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-mount
  namespace: jellyfin
spec:
  containers:
    - name: jellyfin-container
      image: busybox:latest
      command: ["sleep", "3600"]
      volumeMounts:
        - name: jellyfin-volume
          mountPath: /testing
  volumes:
    - name: jellyfin-volume
      persistentVolumeClaim:
        claimName: jellyfin-pvc-testing
