clusters/homelab/apps/jellyfin/filebrowser.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /srv
          name: srv-storage
        # - mountPath: /database.db
        #   name: filebrowser-db
        #   subPath: database.db
        # - mountPath: /.filebrowser.json
        #   name: filebrowser-config
        #   subPath: .filebrowser.json
      volumes:
      - name: srv-storage
        persistentVolumeClaim:
          claimName: jellyfin-pvc-config
      - name: filebrowser-db
        persistentVolumeClaim:
          claimName: filebrowser-db
      - name: filebrowser-config
        persistentVolumeClaim:
          claimName: filebrowser-config
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: jellyfin
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
  - host: filebrowser.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: filebrowser
            port:
              number: 8080
