clusters/homelab/apps/jellyfin/firefox.yaml
---
# NOTE: testing
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: firefox
  template:
    metadata:
      labels:
        app: firefox
    spec:
      containers:
      - name: firefox
        image: jlesage/firefox:v26.09.1
        ports:
        - containerPort: 5800
        resources:
          requests:
            memory: "512Mi"
            cpu: "10m"
          limits:
            memory: "2Gi"
            cpu: "1500m"
      #   securityContext:
      #     runAsUser: 1000
      #     runAsGroup: 1000
      #     allowPrivilegeEscalation: true
      #     capabilities:
      #       drop:
      #         - ALL
      #     readOnlyRootFilesystem: true
      #   volumeMounts:
      #     - name: config-volume
      #       mountPath: /config
      # volumes:
      #   - name: config-volume
      #     emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: firefox
spec:
  selector:
    app: firefox
  ports:
  - protocol: TCP
    port: 5800
    targetPort: 5800
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefox
  namespace: jellyfin
  # labels:
  #   external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "firefox.overseer.work"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: firefox
          port: 5800
