clusters/homelab/apps/jellyfin/fladder.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fladder
  namespace: jellyfin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fladder
  template:
    metadata:
      labels:
        app: fladder
    spec:
      containers:
        - name: fladder
          image: ghcr.io/donutware/fladder-rootless:v0.11.1
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fladder
  namespace: jellyfin
spec:
  selector:
    app: fladder
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fladder
  namespace: jellyfin
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "stream.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: fladder
          port: 8080
