clusters/homelab/apps/jellyfin/jellyseerr-cors.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jellyseerr-cors
  namespace: jellyfin
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyseerr
  cors:
    allowOrigins:
      - https://stream.klimlive.de
    allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    allowHeaders:
      - DNT
      - User-Agent
      - X-Requested-With
      - If-Modified-Since
      - Cache-Control
      - Content-Type
      - Range
      - Authorization
    exposeHeaders:
      - Content-Length
      - Content-Range
    maxAge: "86400s"
    allowCredentials: true
