clusters/homelab/apps/jellyfin/nzbget.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nzbget
  name: nzbget
  namespace: jellyfin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      affinity: # NOTE: follow jellyfin due to lack of RWX.
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: jellyfin
              topologyKey: kubernetes.io/hostname
      volumes:
      - name: nfs-jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-media-data
      - name: nzbget-config
        configMap:
          name: nzbget-config
      - name: tmp
        emptyDir: {}
      - name: inter-downloads-and-history
        persistentVolumeClaim:
          claimName: inter-downloads-and-history
      containers:
      - image: frebib/nzbget-exporter@sha256:af2cb4ef63b5801f6e0002562dfe3e36e1c4bf1777e0a96d2cad9c322722a692
        name: nzbget-exporter
        ports:
          - name: metrics
            containerPort: 9452
            protocol: TCP
      - image: nzbgetcom/nzbget:v26.3
        name: nzbget
        command:
          - /app/nzbget/nzbget
        args:
          - -s
          - -o
          - Server1.Name=$(SERVER1_NAME)
          - -o
          - Server1.Host=$(SERVER1_HOST)
          - -o
          - Server1.Username=$(SERVER1_USERNAME)
          - -o
          - Server1.Password=$(SERVER1_PASSWORD)
          - -o
          - Server2.Name=$(SERVER2_NAME)
          - -o
          - Server2.Host=$(SERVER2_HOST)
          - -o
          - Server2.Username=$(SERVER2_USERNAME)
          - -o
          - Server2.Password=$(SERVER2_PASSWORD)
          - -o
          - Server3.Name=$(SERVER3_NAME)
          - -o
          - Server3.Host=$(SERVER3_HOST)
          - -o
          - Server3.Username=$(SERVER3_USERNAME)
          - -o
          - Server3.Password=$(SERVER3_PASSWORD)
          - -o
          #- ControlIP=0.0.0.0
          - ControlIP=$(POD_IP)
          - -o
          - Feed1.URL=$(FEED1_URL)
          - -o
          - Feed1.Name=$(FEED1_NAME)
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ALL]
        ports:
          - name: http
            containerPort: 6789
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
          - mountPath: /config/persistence/inter
            name: inter-downloads-and-history
            subPath: inter
          - mountPath: /config/persistence/nzb
            name: inter-downloads-and-history
            subPath: nzb
          - mountPath: /config/persistence/queue
            name: inter-downloads-and-history
            subPath: queue
          - name: tmp
            mountPath: /tmp
          - name: nzbget-config
            mountPath: /etc/nzbget.conf
            subPath: nzbget.conf
            readOnly: true
          - name: nfs-jellyfin-data
            mountPath: /data/downloads
            readOnly: false
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: jellyfin
spec:
  selector:
    app: nzbget
  ports:
    - protocol: TCP
      name: http
      port: 6789
      targetPort: 6789
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget-gluetun
  namespace: jellyfin
spec:
  selector:
    app: nzbget
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget-monitoring
  namespace: jellyfin
spec:
  selector:
    app: nzbget
  ports:
    - name: prometheus
      protocol: TCP
      port: 9452
      targetPort: 9452
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
  - host: nzbget.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzbget
            port:
              number: 6789
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
  namespace: jellyfin
  # labels:
  #   external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "nzbget.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nzbget-oauth2-proxy
          port: 4180
