clusters/homelab/apps/jellyfin/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      annotations:
        obi.instrument: "true"
      labels:
        app: radarr
    spec:
      securityContext:
        fsGroup: 1000 # NOTE: set fsGroup for permission to /data/downloads
      affinity: # NOTE: follow nzbget due to lack of RWX
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: nzbget
              topologyKey: kubernetes.io/hostname
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.4.4
          volumeMounts:
            - name: config
              mountPath: /config
            - name: nfs-jellyfin-data
              mountPath: /data/downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: nfs-jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-media-data
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: jellyfin
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
