clusters/homelab/apps/jellyfin/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      annotations:
        obi.instrument: "true"
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 1000 # NOTE: set fsGroup for permission to /data/downloads
      affinity: # NOTE: follow nzbget due to lack of RWX
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: nzbget
              topologyKey: kubernetes.io/hostname
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20
          volumeMounts:
            - name: config
              mountPath: /config
            - name: nfs-jellyfin-data
              mountPath: /data/downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: nfs-jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-media-data
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
